@@ -42,6 +42,7 @@ export(summarise)
 export(summarize)
 export(tibble)
 export(transmute)
+export(treedata)
 exportClasses(treedata)
 exportMethods(get.fields)
 exportMethods(show)
