@@ -1,0 +1,20 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/AllClasses.R
+\name{treedata}
+\alias{treedata}
+\title{treedata}
+\usage{
+treedata(...)
+}
+\arguments{
+\item{...}{parameters}
+}
+\value{
+treedata object
+}
+\description{
+treedata object contructor
+}
+\author{
+guangchuang yu
+}
